# ai-r-hockey

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  package.json
backend/: main.py  pyproject.toml  requirements.txt  run.py  schemas.py
backend/models/: ai.py
backend/routers/: ai.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/play/: page.tsx
frontend/components/: GameCanvas.tsx  GamePage.tsx  HUD.tsx  SettingsPanel.tsx
frontend/game/: aiClient.ts  physics.ts  render.ts  state.ts  types.ts
